# sotellme

./: .env.example  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
archive/mockups/: index.html  styles.css
archive/mockups/v4-calm/: index.html  landing.html
backend/: pyproject.toml
backend/evals/: assessor_cases.json  coach_cases.json  director_cases.json  grader_cases.json  guardrail_cases.json  interviewer_cases.json  profile_parser_cases.json  role_context_cases.json  star_flagger_cases.json
backend/evals/personas/: junior-rambling.json  junior-thin.json  mid-blurred-ownership.json  mid-offtopic.json  senior-bluffer.json  senior-strong.json  staff-injection.json  staff-terse.json
backend/scripts/: evals.py  prepare_package.py  release_version.py  report_layouts_prototype.py  report_mocks.py  report_view_check.py  simulate.py  smoke_session.py
backend/src/sotellme/: __main__.py  assessor.py  budget.py  caching.py  catalog.py  cli.py  coach.py  config.py  coverage.py  director.py  engine.py  eval_datasets.py  eval_progress.py  extraction.py  fetch.py  flagger.py  grader.py  guardrail.py  interviewer.py  judge.py  models.toml  personas.py  posting.py  pricing.py  profile.py  prompts.py  report.py  research.py  role.py  sim_datasets.py  simulation.py  simulator.py  tracing.py  voice.py  web.py
backend/tests/: conftest.py  pdf_fixture.py  stubs.py  test_assessor.py  test_assessor_evals.py  test_assessor_grader_agreement.py  test_budget.py  test_caching.py  test_catalog.py  test_cli.py  test_coach.py  test_coach_evals.py  test_config.py  test_coverage.py  test_director.py  test_director_evals.py  test_engine.py  test_envelope.py  test_eval_datasets.py  test_eval_progress.py  test_extraction.py  test_fetch.py  test_firewall.py  test_fixture_kbs.py  test_flagger.py  test_grader.py  test_grader_evals.py  test_guardrail.py  test_guardrail_evals.py  test_injection.py  test_interviewer.py  test_interviewer_evals.py  test_judge.py  test_level_access.py  test_package.py  test_personas.py  test_posting.py  test_pricing.py  test_profile.py  test_profile_parser_evals.py  (+16 more)
backend/tests/fixtures/: synthetic_cv.md  synthetic_cv.txt
backend/tests/fixtures/how-to-answer/: coaching-principles.md  star-rubric.md
backend/tests/fixtures/how-to-interview/: probing.md  question-style.md
frontend/: package-lock.json  package.json
frontend/src/: App.test.tsx
mockups/: index.html
mockups/v2-signal/: app.html  landing.html  script.js  styles.css
