[project]
name = "sotellme"
version = "0.1.0"
description = "Behavioral interview simulator and coach — engine library"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "langchain>=1.3.8",
    "langchain-anthropic>=1.4.5",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.13.4",
    "pypdf>=6.13.2",
    "rich>=15.0.0",
]

[project.optional-dependencies]
tracing = ["langfuse>=3.0"]
web = ["streamlit>=1.40"]

[project.scripts]
sotellme = "sotellme.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sotellme"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
allowed-confusables = ["–"]

[tool.mypy]
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = "langfuse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true
