[project]
name = "sotellme"
version = "0.1.0"
description = "A behavioral-interview simulator and coach that runs in your terminal."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Srdjan Coric", email = "srdjan.coric1984@gmail.com" }]
keywords = ["interview", "coaching", "behavioral", "llm", "cli", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "langchain>=1.3.8",
    "langchain-anthropic>=1.4.5",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.13.4",
    "pypdf>=6.13.2",
    "rich>=15.0.0",
]

[project.optional-dependencies]
tracing = ["langfuse>=3.0"]
web = ["streamlit>=1.40"]

[project.urls]
Homepage = "https://github.com/SrdjanCoric/sotellme"
Repository = "https://github.com/SrdjanCoric/sotellme"
Issues = "https://github.com/SrdjanCoric/sotellme/issues"

[project.scripts]
sotellme = "sotellme.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sotellme"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
allowed-confusables = ["–"]

[tool.mypy]
strict = true
files = ["src", "tests", "scripts/release_version.py", "scripts/prepare_package.py"]
mypy_path = "scripts"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.coverage.run]
source = ["sotellme"]

[tool.coverage.report]
show_missing = true

[[tool.mypy.overrides]]
module = "langfuse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true
